[package]
name = "mfrc522"
version = "0.0.0"
authors = ["emk <rust@emk.one.pl>"]
license = "MPL-2.0"
description = "Library for MFRC522 card reader."
keywords = ["rfid", "mifare", "ntag", "ISO 14443A", "rc522"]
repository = "https://github.com/emkw/rust-MFRC522.git"
readme = "README.md"
publish = false

[features]
# By default the crate builds as no_std.
default = ["host_crc", "self_test", "i2cdev"]

# Skip all logging.
nlog = ["log/max_level_off"]


# Calculate CRC_A on host rather than on PCD.
host_crc = []

# Provide MFRC522 self-test routine.
# This is disabled by default to save memory on
# embedded systems.
self_test = []
i2cdev=[]
spidev=[]


[dependencies]
log = "0.4.17"
embedded-hal = "0.2.7"


#[[example]]
#name = "bus_i2cdev"
# How to enable crate features for the example?
# features = ["i2cdev"]

#[[example]]
#name = "bus_spidev"
# How to enable crate features for the example?
# features = ["spidev"]

#[[example]]
#name = "dump_info"
# How to enable crate features for the example?
# features = ["spidev", "self_test"]
